--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -24,6 +24,22 @@ input.transparent-input {
     color-scheme: dark;
     display: inline-block;
   }
+  
+  input.transparent-input-prod{
+    border: 4px double white;
+    outline: none;
+    background: transparent;
+    border-bottom: 4px double white; /* Линия под полем ввода */
+    color: white; /* Цвет текста */
+    box-sizing: border-box;
+    width: 20%;
+    margin-right: auto;
+    margin-left: auto;
+    color-scheme: dark;
+    display: inline-block;
+   text-transform: uppercase;
+  }
+
   span.transparent-input-label {
   color:#ed6427;
   font-family: 'Poppins', sans-serif;
