--- a/css/okno.css
+++ b/css/okno.css
@@ -8,7 +8,7 @@ body {
     height: 80%;
     background-color: transparent;
     box-shadow: rgba(0, 0, 0, 0.2) 0 4px 2px -2px;
-    margin: 48px auto;
+    margin: auto;
     display: flex;
     position: absolute;
     bottom: 0;
@@ -18,19 +18,18 @@ body {
 }
 .container-left-menu {
     width: 20%;
-    height: 100%;
+    height: 80%;
     background-color: transparent;
     box-shadow: rgba(0, 0, 0, 0.2) 0 4px 2px -2px;
-    margin: 48px left;
+    margin: left;
     display: flex;
-    flex-direction: column;
     border: 4px double white;
     justify-content: center;
 }
 
 .container-right {
     width: 75%;
-    height: 100%;
+    height: 80%;
     background-color: transparent;
     box-shadow: rgba(0, 0, 0, 0.2) 0 4px 2px -2px;
     margin-left: auto;
@@ -39,20 +38,17 @@ body {
     border: 4px  double white;
 }
 .redact-button {
-    background: #ed6427;
-    color: #fff;
-    text-align: center;
-    border:2px solid #ed6427;
-    font-weight: bold; 
-    font-size: 14px;
-    height: auto;
-    letter-spacing: 2px;
-    margin: 10px;
-    margin-top: auto;
+    position: relative;
     display: flex;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
+    background-color: #ed6427;
+    font-family: 'Poppins', sans-serif;
+    border: #ed6427;
+    color: aliceblue;
+    width: auto;
+    cursor: pointer;
+    padding: 5px;
+    margin-top: 18%;
+
   }
 .redact-button:hover{
   background: transparent;
@@ -61,11 +57,12 @@ body {
 
 span.personal-data {
     color:#ed6427;
-    font-family: 'Poppins', sans-serif;
-    display: flex;
-    justify-content: center;
     font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+    position: relative;
+    display: flex;
     margin-bottom: auto;
+    text-align: center;
     margin-top: 10px;
 }
 
@@ -80,6 +77,35 @@ span.personal-data-auto {
     display: flex;
     flex-direction: column;
  }
+ .user-info{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    bottom: auto;
+    margin-top: 6%;
+
+    
+ }
+ .logo-redact{
+    display: flex;
+    justify-content: center;
+ }
+ 
+ .select-car{
+    border: 4px double white;
+    outline: none;
+    background: black;
+    border-bottom: 4px double white; /* Линия под полем ввода */
+    color: white; /* Цвет текста */
+    box-sizing: border-box;
+    width: 40%;
+    margin-right: auto;
+    margin-left: auto;
+    -webkit-appearance: menulist-button;
+   height: 60px;
+
+ }
+
 
 
 
